# RL-trade

./: .gitignore  LICENSE  README.md  SELF_REVIEW.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/cache/: IDX_NSEI_1d.csv  IDX_NSEI_1d.meta.json
artifacts/models/: ddqn.pt  normalizer.json
src/quanttrade/: __init__.py  __main__.py  cli.py  config.py
src/quanttrade/agents/: base.py  ddqn.py  replay.py  sb3_agent.py
src/quanttrade/dashboard/: __init__.py  app.py  models.py
src/quanttrade/ensemble/: __init__.py  ensemble.py
src/quanttrade/env/: __init__.py  observation.py  portfolio.py  trading_env.py
src/quanttrade/evaluation/: __init__.py  backtester.py  metrics.py
src/quanttrade/features/: indicators.py  normalizer.py  pipeline.py
src/quanttrade/inference/: predictor.py
src/quanttrade/training/: datasets.py  trainer.py
src/quanttrade/utils/: exceptions.py  logging.py  seeding.py
tests/: test_config.py  test_dashboard.py  test_data.py  test_ensemble_inference.py  test_env.py  test_evaluation.py  test_features.py  test_replay.py  test_training.py
