[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quanttrade"
version = "0.1.0"
description = "A reinforcement-learning trading research framework with causal features and leak-free evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuantTrade contributors" }]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "gymnasium>=0.29",
]

# Heavy / optional dependencies are isolated so the core stays installable and
# testable without the deep-learning stack.
[project.optional-dependencies]
agents = ["torch>=2.6", "stable-baselines3>=2.3"]
data = ["yfinance>=0.2.40"]
dashboard = ["streamlit>=1.36", "plotly>=5.22"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pandas-stubs"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "N", "C4", "PTH"]
ignore = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
mypy_path = "src"
packages = ["quanttrade"]
plugins = []

[[tool.mypy.overrides]]
module = ["yfinance.*", "stable_baselines3.*", "torch.*", "streamlit.*", "plotly.*"]
ignore_missing_imports = true

# These two modules are thin glue over untyped third-party ML libraries
# (torch / stable-baselines3). We keep full typing everywhere else and relax
# only the "Any from untyped library" checks here.
[[tool.mypy.overrides]]
module = ["quanttrade.agents.ddqn", "quanttrade.agents.sb3_agent", "quanttrade.dashboard.app"]
warn_return_any = false
disallow_untyped_calls = false
disallow_any_explicit = false
disallow_subclassing_any = false
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
